fix: hide UFO reset on mobile devices

--- a/src/main.css
+++ b/src/main.css
@@ -65,11 +65,11 @@ body {
     transform: translate(40vw, 180vh) scale(5);
   }
   60% {
-    transform: translate(-24vw, 180vh);
+    transform: translate(-30vw, 180vh);
     opacity: 1;
   }
   100% {
-    transform: translate(-24vw, 15vh);
+    transform: translate(-30vw, 15vh);
     opacity: 0;
   }
 }
